# codeforge

./: .gitignore  AGENTS.md  Makefile  README.md  cli.py  pyproject.toml
agents/: __init__.py  base_agent.py  pool.py  review_agent.py
archive/: start_dashboard.py
core/: blocking_tracker.py  config.py  execution_ledger.py  feature_execution_service.py  feature_tracker.py  permission_guard.py  pm_actions.py  project_initializer.py  project_manager.py  ralph_paths.py  state_models.py
dashboard/: agent_pool.py  command_processor.py  consumer.py  coordinator.py  models.py  standalone_server.py  state_repository.py
dashboard-ui/: .gitattributes  RALPH_FRONTEND_STANDARDS.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
data/: claude-progress.txt
docs/: 2026-05-06-design-docs-code-completion-review.md  AGENTS.md  ARCHITECTURE.md  TODO.md  WORKFLOW.md  complete-dev-doc.md  dashboard-api-contract.md  three-project-comparison.md  three-project-roadmap.md
prompts/: architect.md  backend_dev.md  database_expert.md  docs_writer.md  frontend_dev.md  product_manager.md  qa_tester.md  security_reviewer.md  ui_designer.md
ralph/: brainstorm_analyzer.py  brainstorm_manager.py  claude_runner.py  command_handler.py  compaction_agent.py  concurrency_controller.py  config_manager.py  context_engine.py  context_pack_manager.py  contract_manager.py  coupling_analyzer.py  decision_log.py  deliberation_service.py  evidence_collector.py  executable_plan_generator.py  graphify_service.py  pipeline.py  (+36 more)
(+207 files in other folders)
