[project]
name = "codeforge"
version = "0.1.0"
description = "AI全自动开发平台 - 人类当甲方，AI干所有活"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.45.0",
    "mcp>=1.0.0",
    "playwright>=1.49.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "jinja2>=3.1.0",
    "graphifyy>=0.4.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[project.scripts]
codeforge = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "testing"]
py-modules = ["cli"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests",
]
